--- a/hieradata/dev.yaml
+++ b/hieradata/dev.yaml
@@ -1,5 +1,2 @@
----
-message: 'You are in the development application tier'
-
-java_version: '1.7.0_60'
+message: 'This is development enironment'
 
