--- a/environment.conf
+++ b/environment.conf
@@ -1,3 +1,6 @@
-modulepath          = /vagrant/modules:modules:$basemodulepath
-config_version      = 'scripts/config_version.sh $environmentpath $environment'
+#modulepath          = /vagrant/modules:modules:$basemodulepath
+#config_version      = 'scripts/config_version.sh $environmentpath $environment'
 #environment_timeout = 3m
+
+manifest =  /etc/puppetlabs/code/environments/production/manifests/site.pp
+config_version = '/usr/bin/git --git-dir /etc/puppetlabs/code/environments/production/.git rev-parse HEAD'
