Testing roles and profiles

--- a/environment.conf
+++ b/environment.conf
@@ -2,5 +2,6 @@
 #config_version      = 'scripts/config_version.sh $environmentpath $environment'
 #environment_timeout = 3m
 
-manifest =  /etc/puppetlabs/code/environments/production/manifests/site.pp
+#manifest =  /etc/puppetlabs/code/environments/production/manifests/site.pp
+modulepath = site:modules:$basemodulepath
 config_version = '/usr/bin/git --git-dir /etc/puppetlabs/code/environments/production/.git rev-parse HEAD'
